tests/unit/pass/t25.hir
// 25 : function multiple returns

module function{
    def foo() : i32, i32{
        return 0:i32, 1:i32;
    }

    def main() : i32{
        x:i32, y:i32 = @foo();
        return y;
    }
}

