tests/unit/fail/t0.hir
// 0 : wrong constant (value + type)

module default {
    def main() {
        x0:i32 = (0,1):str; // mismatched type
        x1:i32 = 0;         // <-- 0:i32
    }
}

